Expose Events not properly resent
Submitted by François Ouellet
Assigned to Xorg Project Team
Description
Created attachment 114231 one liner patch to xnestCollectExposures in hw/xnest/Events.c
Expose Events are sent with bad coordinates. Using xtrace, I see lines like this one :
000:>:0436: Event Expose(12) window=0x00200023 x=65535 y=65533 width=1 height=3 count=0x0000
and the application in the Xnest ignores it.
If I apply the attached patch, it seems to work fine (for me).
I haven't taken the time to understand what dx and dy are used for in miSendExposures(). Is there a better way to fix this? Will this break something else?
Attachment 114231, "one liner patch to xnestCollectExposures in hw/xnest/Events.c":
xnest-fix-collectexposures.patch
Version: git