(submit/xnest-expose-events) Xnest: fix resending expose events

Based on bug report by François Ouellet:
https://gitlab.freedesktop.org/xorg/xserver/-/issues/132

> Expose Events are sent with bad coordinates.  Using xtrace, I see lines like this one :
>
>   000:>:0436: Event Expose(12) window=0x00200023 x=65535 y=65533 width=1 height=3 count=0x0000
>
> and the application in the Xnest ignores it.
>
> If I apply the attached patch, it seems to work fine (for me).

Signed-off-by: Enrico Weigelt, metux IT consult <info@metux.net>